# FBXAgent

./: .gitignore  ASSET_LICENSE  CMakeLists.txt  FBXAgent.cpp
assets/: quad_box.fbx  tri_box.fbx
design/: ClassDiagram.drawio
libsources/: CMakeLists.txt  FbxAgent.cpp  FbxAgent.h  Model.cpp  Model.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  fbxtest.h  helloworld.cpp
libsources/internal/: ModelLoader.cpp  ModelLoader.h
libsources/internal/common/: CommonUtil.cpp  CommonUtil.h
sources/: main.cpp
test/: CMakeLists.txt
tests/: CMakeLists.txt
tests/sources/: FbxAgentBaseTest.cpp  FbxAgentVertexLoadTest.cpp  Vector2Test.cpp  Vector3Test.cpp  hello_test2.cpp
